WEB-3539 Fixed spacing for modified/created when icons are not displayed

--- a/fid-web/src/main/webapp/style/newCss/asset/asset.css
+++ b/fid-web/src/main/webapp/style/newCss/asset/asset.css
@@ -314,7 +314,14 @@ div.wicket-mask-dark {
     text-align:right;
     float:left;
     display:block;
+}
+
+.withIcon {
     width:120px;
+}
+
+.withoutIcon {
+    width:135px;
 }
 
 .platformIcon {
